Update lang files for nb-NO
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104025 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/nb-NO/download.lang
+++ b/nb-NO/download.lang
@@ -35,6 +35,6 @@ Velkommen til den eneste nettleseren <em>som prioriterer deg først.</em>
 
 
 ;Mozilla Firefox Web Browser
-Mozilla Firefox Web Browser
+Mozilla Firefox nettleser
 
 
