--- a/nb-NO/main.lang
+++ b/nb-NO/main.lang
@@ -239,7 +239,7 @@ Tilpass med utvidelser
 
 
 ;Sync Your Desktop & Mobile
-Synkroniser med skrivebord og mobil
+Synkroniser med desktop og mobil
 
 
 ;Learn More
