--- a/nb-NO/mobile.lang
+++ b/nb-NO/mobile.lang
@@ -2,27 +2,27 @@
 
 
 ;Get Firefox for Android
-Get Firefox for Android
+Last ned Firefox for Android
 
 
 ;Download for <span>Android</span>
-Download for <span>Android</span>
+Last ned for <span>Android</span>
 
 
 ;Free from the Android Market
-Free from the Android Market
+Gratis fra Android Market
 
 
 ;Or visit <a %s>Firefox.com/m</a> on your phone.
-Or visit <a %s>Firefox.com/m</a> on your phone.
+Eller besøk <a %s>Firefox.com/m</a> med telefonen.
 
 
 ;Supported Devices
-Supported Devices
+Støttede enheter
 
 
 ;Get it from iTunes - FREE
-Get it from iTunes - FREE
+Last ned fra iTunes - GRATIS
 
 
 ;Firefox Home for <span>iPhone</span>
@@ -30,102 +30,102 @@ Firefox Home for <span>iPhone</span>
 
 
 ;Access your Firefox history, bookmarks and open tabs on your iPhone.
-Access your Firefox history, bookmarks and open tabs on your iPhone.
+Få tilgang til Firefox-historikk, bokmerker og åpne faner fra din iPhone.
 
 
 ;Download Firefox to <span>Your Mobile</span>
-Download Firefox to <span>Your Mobile</span>
+Last ned Firefox til <span>mobilen din</span>
 
 
 ;Want to test the latest features?
-Want to test the latest features?
+Vil du prøve de nyeste funksjonene?
 
 
 ;Get Firefox Home for iPhone
-Get Firefox Home for iPhone
+Last ned Firefox Home for iPhone
 
 
 ;Download Beta for Android
-Download Beta for Android
+Last ned Beta for Android
 
 
 ;Download
-Download
+Last ned
 
 
 ;for
-for
+for {ok}
 
 
 ;Free from iTunes
-Free from iTunes
+Gratis fra iTunes
 
 
 ;You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
-You’ll get to experience cutting-edge features and provide feedback to help refine and polish what will be in the final release.
+Du kan oppleve de nyeste funksjonene, og gi tilbakemelding for å hjelpe oss avgjøre hva som skal være med i den endelige utgivelsen.
 
 
 ;Developer Tools
-Developer Tools
+Utviklerverktøy
 
 
 ;You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
-You can install the mobile version of Firefox to our desktop computer in order to test, provide feedback, and build add-ons.
+Du kan installere den mobile versjonen av Firefox på vår desktop-maskin for å teste og gi tilbakemelding, og lage utvidelser.
 
 
 ;Connect With Firefox for Mobile:
-Connect With Firefox for Mobile:
+Koble til med Firefox for Mobil:
 
 
 ;Monthly newsletter
-Monthly newsletter
+Månedlig nyhetsbrev
 
 
 ;Follow us
-Follow us
+Følg oss
 
 
 ;Become a fan
-Become a fan
+Bli en fan
 
 
 ;Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
-Firefox is full of innovations that let you type less, browse more and get to the Web quickly and easily.
+Firefox er full av nyskapninger som gjør at du skriver mindre, surfer mere, og kommer i gang på nettet raskt og enkelt.
 
 
 ;Freedom from typing
-Freedom from typing
+Frihet fra tasting
 
 
 ;The Awesome Screen learns your favorite sites so you can browse with little or no typing.
-The Awesome Screen learns your favorite sites so you can browse with little or no typing.
+Awesome-skjermen lærer hva som er favorittnettstedene dine, og hjelper deg å komme dit med lite eller ingen tasting.
 
 
 ;Best of both worlds
-Best of both worlds
+Det beste av to verdener
 
 
 ;Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
-Firefox for Android is now redesigned and optimized for the way you browse on phones and tablets.
+Firefox for Android er redesignet og optimalisert for måten du bruker nettet på telefoner og nettbrett.
 
 
 ;Browse quick and easy
-Browse quick and easy
+Enkel og rask nettlesing
 
 
 ;Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
-Features like Sync, tabbed browsing and one-touch bookmarking mean everything you want is close at hand.
+Funksjoner som Sync, nettlesing med faner, bokmerking med ett trykk gjør at du har alt du vil ha.
 
 
 ;<a %s>Need help?</a> Visit our Firefox for Android Support site.
-<a %s>Need help?</a> Visit our Firefox for Android Support site.
+<a %s>Trenger du hjelp?</a> Besøk vårt brukerstøttenettsted for Firefox for Android.
 
 
 ;Download and test the build that’s right for you.
-Download and test the build that’s right for you.
+Last ned og prøv ut versjonen som er riktig for deg.
 
 
 ;See all our channels for mobile »
-See all our channels for mobile »
+Se alle våre kanaler for mobil »
 
 
