--- a/nb-NO/upgradedialog.lang
+++ b/nb-NO/upgradedialog.lang
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+få det nyeste i sikkerhet
 
 
 ;experience faster performance
@@ -39,19 +39,19 @@ få bedre ytelse
 
 
 ;enjoy greater customization
-enjoy greater customization
+ta i bruk nye tilpasningsmuligheter
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Din versjon av Firefox vil snart være sårbar for angrep på nettet.
 
 
 ;Stay safe online
-vær trygg på nettet
+Vær trygg på nettet
 
 
 ;Enjoy new features
-bruk de nye funksjonene
+Bruk de nye funksjonene
 
 
 ;URGENT!
@@ -63,26 +63,26 @@ Firefox-versjonen du bruker beskytter ikke lenger mot angrep på nettet.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Dette er siste påminnelse før du vil automatisk bli oppgradert til den nyeste versjonen
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox støtter ikke lenger din versjon av operativsystemet, og vil derfor være sårbar for angrep på nettet.
 
 
 ;We recommend:
-We recommend:
+Vi anbefaler:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Oppgradering av <a %s>operativsystemet</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Nedlasting av en kompatibel nettleser
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Installering av en gratis oppgradering til <a %s>operativsystemet</a>
 
 
