[l10n: gl] updated upgradedialog.lang file for www.mozilla.org
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104053 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/gl/upgradedialog.lang
+++ b/gl/upgradedialog.lang
@@ -23,15 +23,15 @@ Máis incríbel que nunca
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Hai unha nova versión do Firefox que permitirá unha mellor protección contra os ataques en liña.
 
 
 ;Get the upgrade — it’s fast & free!
-<a %s>Actualícese</a> - Axiña e de balde!
+Actualícese — Axiña e de balde!
 
 
 ;get the latest in security
-get the latest in security
+obteña o último en seguranza
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ obteña un mellor rendemento
 
 
 ;enjoy greater customization
-enjoy greater customization
+goce dunha maior personalización
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+A versión que ten do Firefox pronto será vulnerábel ós ataques en liña.
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ A versión que ten do Firefox xa non está protexida contra ataques en liña.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Este é o último recordatorio antes da actualización automática á última versión
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox xa non é compatíbel coa versión do seu sistema operativo e será vulnerábel aos ataques en liña.
 
 
 ;We recommend:
-We recommend:
+Recomendámoslle:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Anovar o seu <a %s>sistema operativo</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Descargar un navegador compatíbel
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalar unha anovación de balde para o seu <a %s>sistema operativo</a>
 
 
