l10n:lij suggestion by F.Noceti
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104058 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lij/snippets.lang
+++ b/lij/snippets.lang
@@ -90,7 +90,7 @@ Prêuva, rifìniscile e polìscile e agiùttine a fâ a mêgio versción de sén
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-T'âmi o Firefox? Ti veu ne agiutâ a fâ a pròscima versción ancón ciù bélla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
+T'ê inamoòu de Firefox? Ti veu ne agiutâ a fâ a pròscima versción ancón ciù bélla? <a href="%">Descàrega Firefox Beta</a> e dànne di coménti ancheu!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
