updated latvian translations
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104069 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/lv/newsletter.lang
+++ b/lv/newsletter.lang
@@ -62,7 +62,7 @@ Uzziniet visu par šo mūsu <span>jaunumos</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Jūsu vēstkopas pieteikums ir apstiprināts.
 
 
 ;Format
@@ -70,110 +70,109 @@ Formāts
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Viss gatavs! <span>Bet uzgaidi, ir vēl</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Gribi iegūt pašu aktuālāko informāciju? Pastāsti mums nedaudz par sevi. Un ja jau esi te, piesakies Mozilla jaunumiem.
 
 
 ;Firefox & You
-Firefox & You
+Firefox un Tu
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Citas mūsu vēstkopas:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Uzzini par jaunākajiem trikiem un viltībām, kā iegūt maksimālo labumu no Tava mīļākā pārlūka.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Mobilais Firefox
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Iepazīsti degošākos papildinājumu un mobilā Firefox iespējas.
 
 
 ;Beta News
-Beta News
+Beta ziņas
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Lasi par jaunākajām iespējām Firefox versijās pirms tās nonāk gala versijā.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Būsim draugi!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Firefox dzīvo arī sociālo tīklu vietnēs. Piesakies un piedalies sarunā.
 
 
 ;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+Pārvaldīt <span>vēstkopu abonementus</span>
 
 
 ;Subscribe
-Subscribe
+Pieteikties
 
 
 ;Unsubscribe
-Unsubscribe
+Atteikties
 
 
 ;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+Atzīme te, ka vēlies, lai tevi izņem no visiem Mozilla epastu sarakstiem
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Izņemiet mani no visiem Mozilla epastiem
 
 
 ;Save Preferences
-Save Preferences
+Saglabāt iestatījumus
 
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Paldies, ka atjaunināji epasta iestatījumus.
 
 
 ;You've been unsubscribed.
-You've been unsubscribed.
+Jūs esat veiksmīgi atteicies.
 
 
 ;We’re sorry to see you go. Would you mind telling us why you’re leaving?
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Mums ļoti žēl, ka aizejat. Vai Jūs neiebilstu pateikt kāpēc aizejat?
 
 
 ;You send too many emails.
-You send too many emails.
+Jūs sūtāt pārāk daudz epastu.
 
 
 ;Your content wasn't relevant to me.
-Your content wasn't relevant to me.
+Ziņojumu saturs man nebija aktuāls.
 
 
 ;Your email design was too hard to read.
-Your email design was too hard to read.
+Ziņojumu dizainu bija pārāk grūti lasīt.
 
 
 ;I didn't sign up for this.
-I didn't sign up for this.
+Es nemaz nepieteicos uz šīm zinām.
 
 
 ;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Sekoju Mozilla Feisbukā un Twiterī.
 
 
 ;Submit
-Submit
+Nosūtīt
 
 
 ;Thanks for telling us why you’re leaving.
-Thanks for telling us why you’re leaving.
-
+Paldies, ka izstāstījāt, kāpēc aizejat.
 
