--- a/lv/snippets.lang
+++ b/lv/snippets.lang
@@ -118,6 +118,6 @@ Uzaicini draugus ievērtēt jaunās Firefox iespējas. <a href="%">Kļūsti par 
 
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
+Izmanto Firefox no vairākiem datoriem? Tagad Tu vari sinhronizēt papildinājumus starp visiem šiem datoriem. <a href="%">Uzzini par Sinhronizāciju.</a>
 
 
