--- a/lv/upgradedialog.lang
+++ b/lv/upgradedialog.lang
@@ -23,7 +23,7 @@ Vairāk superīguma kā jebkad
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Ir pieejama jauna Firefox versija, kas daudz labāk aizsargā no uzbrukumiem Intertnetā.
 
 
 ;Get the upgrade — it’s fast & free!
@@ -31,7 +31,7 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+iegūstiet drošāko
 
 
 ;experience faster performance
@@ -39,11 +39,11 @@ iegūstiet uzlabotu ātrdarbību
 
 
 ;enjoy greater customization
-enjoy greater customization
+izbaudiet lielāku pielāgojamību
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Jūsu Firefox versiju drīzumā apdraudēs uzbrukumi Internetā.
 
 
 ;Stay safe online
@@ -63,26 +63,26 @@ Jūsu Firefox versija vairs nepasargā no apdraudējumiem internetā.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Šis ir pēdējais atgādinājums pirms automātiskas atjaunināšanas uz jaunāko Firefox versiju
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Firefox vairs neatbalsta jūsu operētājsistēmas versiju un nespēs aizsargāt no Interneta uzbrukumiem.
 
 
 ;We recommend:
-We recommend:
+Mēs iesakām:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Atjaunināt <a %s>operētājsistēmu</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Lejupielādēt saderīgu pārlūku
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Instalēt bezmaksas atjauninājumu jūsu <a %s>operētājsistēmai</a>
 
 
