--- a/cy/main.lang
+++ b/cy/main.lang
@@ -1,5 +1,5 @@
 ;Navigation
-Symud
+Llywio
 
 
 ;Press area
@@ -31,7 +31,7 @@ Ychwanegion
 
 
 ;About Us
-Amdanom ni
+Amdanom Ni
 
 
 ;Developers
@@ -39,7 +39,7 @@ Datblygwyr
 
 
 ;Labs
-Labordai
+Labs{ok}
 
 
 ;skip to Navigation
@@ -59,7 +59,7 @@ Ynghylch Mozilla
 
 
 ;Get Involved
-Ymuno â ni
+Ymuno â Ni
 
 
 ;Licensing
@@ -75,7 +75,7 @@ Canolfan y Wasg
 
 
 ;Contact Us
-Cysylltu â ni
+Cysylltu â Ni
 
 
 ;Site contact
@@ -111,7 +111,7 @@ Ymweld â Mozilla.com (yn Saesneg)
 
 
 ;Download Firefox - Free
-Llwytho Firefox i lawr - Am ddim
+Llwytho Firefox i lawr - Am Ddim
 
 
 ;Release Notes
@@ -119,7 +119,7 @@ Nodiadau rhyddhau
 
 
 ;Other Systems and Languages
-Systemau ac ieithoedd eraill
+Systemau ac Ieithoedd Eraill
 
 
 ;Get Firefox
@@ -127,7 +127,7 @@ Estyn Firefox
 
 
 ;Free Download
-Llwytho i Lawr am ddim
+Llwytho i Lawr Am Ddim
 
 
 ;Help us make Firefox even better!
@@ -147,7 +147,7 @@ Cau
 
 
 ;Download Now - Free
-Llwytho i lawr yn awr - Am ddim
+Llwytho i Lawr Nawr - Am Ddim
 
 
 ;Return to top
@@ -167,7 +167,7 @@ Nodweddion
 
 
 ;Customize
-Addasu
+Cyfaddasu
 
 
 ;Synchronize
@@ -175,15 +175,15 @@ Cydweddu
 
 
 ;Develop for Mobile
-Datblygu ar gyfer ffôn symudol
+Datblygu ar gyfer Ffôn Symudol
 
 
 ;Other Supported Platforms
-Systemau eraill sy'n cael eu cynnal
+Systemau Eraill sy'n Cael eu Cynnal
 
 
 ;Other Platforms &amp; Languages
-Systemau ac ieithoedd eraill
+Systemau ac Ieithoedd Eraill
 
 
 ;Choose your location
@@ -203,7 +203,7 @@ Nesaf
 
 
 ;MB
-MB
+MB{ok}
 
 
 ;MegaBytes
@@ -223,11 +223,11 @@ Ar wahân i lle <a href="%s">nodir</a> yn wahanol, mae cynnwys y wefan wedi ei d
 
 
 ;Report Trademark Abuse
-Adrodd am gamddefnyddio nod masnach
+Adrodd am Gamddefnyddio Nod Masnach
 
 
 ;Free Upgrade
-Diweddaru am ddim
+Diweddaru am Ddim
 
 
 ;Follow us on:
@@ -235,11 +235,11 @@ Dilyn ni ar:
 
 
 ;Customize with Add-ons
-Addasu gydag ychwanegion
+Addasu gydag Ychwanegion
 
 
 ;Sync Your Desktop & Mobile
-Cydweddu eich bwrdd gwaith gyda'ch ffôn symudol
+Cydweddu eich Bwrdd Gwaith a'ch Ffôn Symudol
 
 
 ;Learn More
@@ -271,7 +271,7 @@ Darllenwch Bolisi Preifatrwydd Mozilla a chytuno iddo gan dicio'r blwch.
 
 
 ;Please enter your email address and review the Mozilla Privacy Policy.
-Rhowch eich cyfeiriad e-bost a darllen Polisi Preifatrwydd Mozilla.
+Rhowch eich cyfeiriad e-bost a darllenwch Bolisi Preifatrwydd Mozilla.
 
 
 ;Mobile
@@ -287,7 +287,7 @@ Cymrwch gip ar We Yfory
 
 
 ;Journey to the Future with Firefox
-Taith i'r dyfodol gyda Firefox
+Taith i'r Dyfodol gyda Firefox
 
 
 ;Join the Beta Program
@@ -303,7 +303,7 @@ Mae dyfodol y We yn aros amdanoch!
 
 
 ;The future of the Web starts now.
-Mae dyfodol y We yn cychwyn yn awr.
+Mae dyfodol y We yn cychwyn nawr.
 
 
 ;Try Firefox with a fresh look and feel.
@@ -327,15 +327,15 @@ Edrychwch ar Firefox ar ei newydd wedd.
 
 
 ;Download Beta Now.
-Llwythwch y Beta i lawr yn awr.
+Llwythwch y Beta i Lawr Nawr.
 
 
 ;All Systems & Languages
-Pob system ac iaith
+Pob System ac Iaith
 
 
 ;View Full Site
-Gweld y wefan gyfan
+Gweld y Wefan Gyfan
 
 
 ;Get Firefox for Android
@@ -351,7 +351,7 @@ Am ddim o'r Android Market
 
 
 ;Desktop
-Bwrdd gwaith
+Bwrdd Gwaith
 
 
 ;Firefox Beta for mobile
@@ -367,7 +367,7 @@ E-bost
 
 
 ;Mozilla Firefox. Bringing the modern Web to XP.
-Mozilla Firefox. Dod a'r we fodern i XP.
+Mozilla Firefox. Dod a'r We fodern i XP.
 
 
 ;Super speed
@@ -394,10 +394,10 @@ Rydych yn defnyddio hen fersiwn o Firefox. Estynnwch <a href="%s">eich diweddari
 
 
 ;Upgrade now
-Diweddarwch yn awr
+Diweddarwch nawr
 
 
 ;Update now
-Diweddarwch yn awr
+Diweddarwch nawr
 
 
