--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -6,7 +6,7 @@ Derbyn Newyddion Misol
 
 
 ;Your Email Address
-Eich cyfeiriad e-bost
+Eich Cyfeiriad E-bost
 
 
 ;Text
@@ -14,7 +14,7 @@ Testun
 
 
 ;Available Languages
-Ieithoedd sydd ar gael
+Ieithoedd sydd ar Gael
 
 
 ;Select country
@@ -34,7 +34,7 @@ Rwy'n cytuno i'r <a href="%s">Polisi Preifatrwydd</a>
 
 
 ;Sign me up!
-Cofrestrwch fi!
+Cofrestru!
 
 
 ;We will only send you Mozilla-related information.
@@ -42,138 +42,135 @@ Dim ond gwybodaeth am Mozilla fyddwn ni'n anfon atoch.
 
 
 ;Thanks for Subscribing!
-Diolch am danysgrifio!
+Diolch am Danysgrifio!
 
 
 ;We look forward to soon begin sharing tips &amp; tricks on getting the most out of Firefox, as well as exciting news about Mozilla and how we’re working to create a better Web.
-Rydym yn edrych ymlaen at rannu cyngor ar sut i gael y mwyaf allan o Firefox, yn ogystal â newyddion cyffrous am Mozilla a'r ffordd rydym yn gweithio i greu gwell Gwe.
+Rydym yn edrych ymlaen at rannu gwybodaeth ar sut i gael y gorau allan o Firefox, yn ogystal â newyddion cyffrous am Mozilla a'r ffordd rydym yn gweithio i greu gwell Gwe.
 
 
 ;Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
-Subscribe to monthly updates and keep current with Mozilla news, including the latest tips and tricks for getting the most out of your Firefox browser. It’s the perfect way for us to keep in touch!
+Tanysgrifiwch i'r diweddariadau misol a chadw'n gyfredol gyda newyddion Mozilla, gan gynnwys y ffyrdd o gael y gorau allan o'ch porwr Firefox. Dyma'r ffordd berffaith i ni gadw mewn cysylltiad!
 
 
 ;We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
-We just sent you a confirmation message by email. Click on the confirmation link in this email to validate your subscription to this mailing list.
+Rydym newydd angfon neges i gadarnhau drwy'r e-bost. Cliciwch ar y ddolen cadarnhau o fewn yr e-bost er mwyn dilysu eich tanysgrifiad i'r rhestr e-bostio hon..
 
 
 ;Read all about it in our <span>newsletter</span>
-Read all about it in our <span>newsletter</span>
+Darllen ein newyddion yn ein <span>newyddlen</span>
 
 
 ;Your newsletter subscription has been confirmed.
-Your newsletter subscription has been confirmed.
+Mae eich tanysgrifiad i'r newyddlen wedi ei gadarnhau.
 
 
 ;Format
-Format
+Fformat
 
 
 ;You’re All Set! <span>But Wait, There’s More</span>
-You’re All Set! <span>But Wait, There’s More</span>
+Dyna ni! <span>Ond Arhoswch, Mae yna Ragor</span>
 
 
 ;Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
-Want to get the most relevant info? Tell us a little more about yourself. And while you’re here, sign up for other Mozilla news.
+Eisiau derbyn y wybodaeth fwyaf perthnasol? Dywedwch wrthym ychydig amdanoch chi eich hun. A tra bo chi yma, tanysgrifiwch i newyddion eraill Mozilla.
 
 
 ;Firefox & You
-Firefox & You
+Firefox & You{ok}
 
 
 ;Our Other Newsletters:
-Our Other Newsletters:
+Ein Newyddlenni Eraill:
 
 
 ;Get the latest tips and tricks for getting the most out of your favorite browser.
-Get the latest tips and tricks for getting the most out of your favorite browser.
+Derbyn y wybodaeth ddiweddaraf ar sut mae cael y gorau allan o'ch hoff borwr.
 
 
 ;Firefox Mobile
-Firefox Mobile
+Firefox Mobile{ok}
 
 
 ;Learn about the hottest new add-ons and features for Firefox mobile.
-Learn about the hottest new add-ons and features for Firefox mobile.
+Dysgu am yr ychwanegion newydd gorau a nodweddion Firefox symudol.
 
 
 ;Beta News
-Beta News
+Beta News{ok}
 
 
 ;Read about the latest features for Firefox desktop and mobile before the final release.
-Read about the latest features for Firefox desktop and mobile before the final release.
+Darllen am nodweddion diweddaraf Firefox ar y bwrdd gwaith a symudol cyn eu rhyddhau'n derfynnol.
 
 
 ;Let’s Be Friends!
-Let’s Be Friends!
+Bod yn Ffrind!
 
 
 ;Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
-Firefox is also on your favorite social networking sites. Connect with us and join the conversation.
+Mae Firefox hefyd ar eich hoff wefannau rhwydweithio cymdeithasol. Cysylltwch â ni ac ymuno yn y sgwrs.
 
 
-;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+;Manage your <span>Newsletter Subscriptions
+Rheoli eich <span>Tanysgrifiadau Newyddlen
 
 
 ;Subscribe
-Subscribe
+Tanysgrifio
 
 
 ;Unsubscribe
-Unsubscribe
+Dad-danysgrifio
 
 
-;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+;Check here if you’d like to be removed from all Mozilla emails'
+Ticiwch yma os hoffech chi gael eich tynnu oddi ar holl restrau e-bostio Mozilla
 
 
 ;Remove me from all Mozilla emails
-Remove me from all Mozilla emails
+Tynnu oddi ar holl e-byst Mozilla
 
 
 ;Save Preferences
-Save Preferences
-
+Cadw Dewisiadau
 
 ;Thanks for updating your email preferences.
-Thanks for updating your email preferences.
+Diolch am ddiweddaru eich dewisiadau e-bost.
 
 
-;You've been unsubscribed.
 You've been unsubscribed.
+Rydych wedi eich dad-danysgrifio.
 
 
-;We’re sorry to see you go. Would you mind telling us why you’re leaving?
 We’re sorry to see you go. Would you mind telling us why you’re leaving?
+Rydym yn flin o'ch gweld yn mynd. Fyddech chi'n fodlon dweud pam rydych yn gadael?
 
 
-;You send too many emails.
 You send too many emails.
+Rydych yn anfon gormod o e-byst.
 
 
-;Your content wasn't relevant to me.
 Your content wasn't relevant to me.
+Doedd y cynnwys ddim yn berthnasol i mi.
 
 
-;Your email design was too hard to read.
 Your email design was too hard to read.
+Roedd cynllun yr e-bost yn rhy anodd ei ddarllen.
 
 
-;I didn't sign up for this.
 I didn't sign up for this.
+Doeddwn i ddim wedi gofyn am hyn.
 
 
-;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+Rwy'n cadw cysylltiad â Mozilla drwy Facebook a Twitter yn lle hynny.
 
 
-;Submit
 Submit
+Cyflwyno
 
 
-;Thanks for telling us why you’re leaving.
 Thanks for telling us why you’re leaving.
-
-
+Diolch am ddweud pam rydych yn gadael.
