--- a/cy/upgradedialog.lang
+++ b/cy/upgradedialog.lang
@@ -7,7 +7,7 @@ Mae'r Firefox Diweddaraf Yma!
 
 
 ;<a %s>Quick, easy and free update</a>
-<a %s>Diweddariad cyflym, hawdd, am ddim </a>
+<a %s>Diweddariad cyflym, hawdd ac am ddim </a>
 
 
 ;Fresh new look
@@ -23,7 +23,7 @@ Mwy anhygoel nag erioed
 
 
 ;There’s a new version of Firefox that can better protect you against online attacks.
-There’s a new version of Firefox that can better protect you against online attacks.
+Mae yna fersiwm newydd o Firefox sy'n gallu eich amddiffyn yn well rhag ymosodiadau ar-lein.
 
 
 ;Get the upgrade — it’s fast & free!
@@ -31,27 +31,27 @@ There’s a new version of Firefox that can better protect you against online at
 
 
 ;get the latest in security
-get the latest in security
+derbyn y diogelwch diweddaraf
 
 
 ;experience faster performance
-pori'n gynt
+profi pori cyflymach
 
 
 ;enjoy greater customization
-enjoy greater customization
+mwynhau gwell cyfaddasu
 
 
 ;Your version of Firefox will soon be vulnerable to online attacks.
-Your version of Firefox will soon be vulnerable to online attacks.
+Bydd eich fersiwn chi o Firefox yn agored i ymosodiadau cyn bo hir.
 
 
 ;Stay safe online
-cadw'n ddiogel arlein
+Cadw'n ddiogel arlein
 
 
 ;Enjoy new features
-mwynhau nodweddion newydd
+Mwynhau nodweddion newydd
 
 
 ;URGENT!
@@ -59,30 +59,30 @@ AR FRYS!
 
 
 ;Your version of Firefox is no longer protected against online attacks.
-Nid yw eich fersiwn o Firefox wedi'i ddiogelu rhag ymosodiadau arlein bellach.
+Nid yw eich fersiwn chi o Firefox wedi'i ddiogelu rhag ymosodiadau ar-lein bellach.
 
 
 ;This is your last reminder before you will be automatically updated to the latest version
-This is your last reminder before you will be automatically updated to the latest version
+Dyma'r rhybudd olaf cyn y byddwch yn cael eich diweddaru'n awtomatig i'r fersiwn diweddaraf
 
 
 ;Firefox no longer supports your operating system version and will be vulnerable to online attacks.
-Firefox no longer supports your operating system version and will be vulnerable to online attacks.
+Nid yw Firefox yn cynnal y fersiwn yma o'ch system weithredu bellach a bydd yn agored i ymosodiadau ar-lein.
 
 
 ;We recommend:
-We recommend:
+Rydym yn argymell:
 
 
 ;Upgrading your <a %s>operating system</a>
-Upgrading your <a %s>operating system</a>
+Diweddaru eich <a %s>system weithredu</a>
 
 
 ;Downloading a compatible browser
-Downloading a compatible browser
+Llwytho porwr cydnaws i lawr
 
 
 ;Installing a free upgrade to your <a %s>operating system</a>
-Installing a free upgrade to your <a %s>operating system</a>
+Gosod diweddariad am ddim i'ch <a %s>system weithredu</a>
 
 
