--- a/cy/firefoxtesting.lang
+++ b/cy/firefoxtesting.lang
@@ -2,58 +2,58 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Llwytho i Lawr Firefox Beta Android - Am Ddim
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Llwytho i Lawr Firefox Beta y Bwrdd Gwaith - Am Ddim
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Llwytho i Lawr a phrofi fersiynnau dyfodol Firefox. Profwch y datblygiadau diweddaraf gydag Aurora neu Beta.
 
 
 ;Firefox Beta
-Firefox Beta
+Firefox Beta{ok}
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta ar gyfer:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta ar gyfer Symudol
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Llwytho'r Beta i lawr a bod yn rhan o ddyfodol Firefox.
 
 
 ;1. Test Features
-1. Test Features
+1. Profi Nodweddion
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Profwch y gwellianau perfformiad, cyfaddasu a diogelwch diweddaraf sydd ar fin cael eu cyflwyno.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Coethi a Sgleinio
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Anfonwch adroddiadau gwall er mwyn i ni wneud gwelliannau perfformiad a defnyddioldeb o fewn amgylchedd sefydlog.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Gwneud eich Rhan
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Mynnwch gael dylanwad ar y fersiwn nesaf o Firefox a'r 450 miliwn o bobl sy'n ei ddefnyddio bob dydd.
 
 
 ;Supported devices
-Supported devices
+Dyfeisiau cymeradwy
 
 
