--- a/cy/snippets.lang
+++ b/cy/snippets.lang
@@ -82,42 +82,39 @@ Llwytho Firefox i lawr ar i'ch tabled Android a rhoi grym y We yn eich dwylo. <a
 
 
 ;<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
-<a href="%">Download Firefox Beta</a>, provide feedback and help make the next Firefox even more awesome for our 450 million users.
+<a href="%">Llwytho Firefox Beta i Lawr</a>, darparu adborth a chymorth er mwyn gwneud y Firefox nesaf yn well nag erioed ar gyfer ein 450 miliwn o ddefnyddwyr.
 
 
 ;Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
-Test features, refine and polish them and help us make our next version better than ever. <a href="%">Download Firefox Beta today!</a>
+Profi nodweddion, eu coethi a'u sgleinio a'n cynorthwyo ni i wneud y fersiwn nesaf yn well nag erioed. <a href="%">Llwytho Firefox Beta i lawr heddiw!</a>
 
 
 ;Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
-Love Firefox? Want to help make our next version even better? <a href="%">Download Firefox Beta</a> and give us feedback today!
+Hoffi Firefox? Eisiau ein cynorthwyo i wneud ein fersiwn nesaf yn well byth? <a href="%">Llwytho Firefox Beta i lawr</a> a rhoi adborth i ni heddiw!
 
 
 ;Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
-Are you running the latest Firefox Beta? <a href="%">Get it now</a> and help us test the latest features.
+Ydych chi'n rhedeg y fersiwn diweddaraf o Firefox Beta? <a href="%">Estyn Firefox nawr</a> a'n cynorthwyo ni i brofi'r nodweddion diweddaraf.
 
 
 ;Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
-Not on the latest Firefox Beta? <a href="%">Get it today</a> to stay on top of what we're working on for our next version.
+Ddim ar y Firefox Beta diweddaraf? <a href="%">Estyn Firefox heddiw</a> a chadw llygad ar ein gwaith ar y fersiwn nesaf.
 
 
 ;Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
-Want to share your feedback? <a href="%">Find out how</a> and help make the next version of Firefox even more awesome.
+Eisiau rhannu eich adborth? <a href="%">Canfod sut</a> a'n cynorthwyo i wneud y fersiwn nesaf o Firefox yn well nag erioed.
 
 
 ;Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
-Firefox Beta users: Don't forget to <a href="%">provide feedback</a> to help us put the final tweaks on our next version.
+Defnyddwyr Firefox Beta: Peidiwch ag anghofio <a href="%">darparu adborth</a> i'n cynorthwyo i lunio'r gwelliannau diweddaraf i'r fersiwn nesaf.
 
 
 ;Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
-Help make the next version of Firefox even more awesome. <a href="%">Become an Affiliate</a> and share Firefox Beta with your friends.
+Cynorthwyo i wneud y fersiwn nesaf o Firefox y gorau erioed. <a href="%">Dod yn Gyfaill</a> a rhannu Firefox Beta gyda'ch ffrindiau.
 
 
 ;Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-Invite friends to preview upcoming Firefox features. <a href="%">Become an Affiliate</a> and share Firefox Aurora today.
-
+Gwahodd ffrindiau i gael rhagolwg o nodweddion y Firefox nesaf. <a href="%">Dod yn Gyfaill</a> a rhannu Firefox Aurora heddiw.
 
 ;Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-Using Firefox on several computers? Now you can synchronize your add-ons across them all. <a href="%">Find out how to activate Sync.</a>
-
-
+Defnyddio Firefox ar nifer o gyfrifiaduron? Nawr mae modd cydweddu eich ychwanegiadau ar eu traws i gyd. <a href="%">Dysgu sut mae gweithredu Sync.</a>
