l10n: cy, update to newsletter.lang
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104073 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -113,8 +113,8 @@ Bod yn Ffrind!
 Mae Firefox hefyd ar eich hoff wefannau rhwydweithio cymdeithasol. Cysylltwch â ni ac ymuno yn y sgwrs.
 
 
-;Manage your <span>Newsletter Subscriptions
-Rheoli eich <span>Tanysgrifiadau Newyddlen
+;Manage your <span>Newsletter Subscriptions</span>
+Manage your <span>Newsletter Subscriptions</span>
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Tanysgrifio
 Dad-danysgrifio
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
-Ticiwch yma os hoffech chi gael eich tynnu oddi ar holl restrau e-bostio Mozilla
+;Check here if you’d like to be removed from all Mozilla emails
+Check here if you’d like to be removed from all Mozilla emails
 
 
 ;Remove me from all Mozilla emails
@@ -136,41 +136,44 @@ Tynnu oddi ar holl e-byst Mozilla
 ;Save Preferences
 Cadw Dewisiadau
 
+
 ;Thanks for updating your email preferences.
 Diolch am ddiweddaru eich dewisiadau e-bost.
 
 
-You've been unsubscribed.
+;You've been unsubscribed.
 Rydych wedi eich dad-danysgrifio.
 
 
-We’re sorry to see you go. Would you mind telling us why you’re leaving?
+;We’re sorry to see you go. Would you mind telling us why you’re leaving?
 Rydym yn flin o'ch gweld yn mynd. Fyddech chi'n fodlon dweud pam rydych yn gadael?
 
 
-You send too many emails.
+;You send too many emails.
 Rydych yn anfon gormod o e-byst.
 
 
-Your content wasn't relevant to me.
+;Your content wasn't relevant to me.
 Doedd y cynnwys ddim yn berthnasol i mi.
 
 
-Your email design was too hard to read.
+;Your email design was too hard to read.
 Roedd cynllun yr e-bost yn rhy anodd ei ddarllen.
 
 
-I didn't sign up for this.
+;I didn't sign up for this.
 Doeddwn i ddim wedi gofyn am hyn.
 
 
-I'm keeping in touch with Mozilla on Facebook and Twitter instead.
+;I'm keeping in touch with Mozilla on Facebook and Twitter instead.
 Rwy'n cadw cysylltiad â Mozilla drwy Facebook a Twitter yn lle hynny.
 
 
-Submit
+;Submit
 Cyflwyno
 
 
-Thanks for telling us why you’re leaving.
+;Thanks for telling us why you’re leaving.
 Diolch am ddweud pam rydych yn gadael.
+
+
