--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -113,8 +113,8 @@ Bod yn Ffrind!
 Mae Firefox hefyd ar eich hoff wefannau rhwydweithio cymdeithasol. Cysylltwch â ni ac ymuno yn y sgwrs.
 
 
-;Manage your <span>Newsletter Subscriptions</span>
-Manage your <span>Newsletter Subscriptions</span>
+;Manage your <span>Newsletter Subscriptions
+Rheoli eich <span>Tanysgrifiadau Newyddlen
 
 
 ;Subscribe
@@ -125,8 +125,8 @@ Tanysgrifio
 Dad-danysgrifio
 
 
-;Check here if you’d like to be removed from all Mozilla emails
-Check here if you’d like to be removed from all Mozilla emails
+;Check here if you’d like to be removed from all Mozilla emails'
+Ticiwch yma os hoffech chi gael eich tynnu oddi ar holl restrau e-bostio Mozilla
 
 
 ;Remove me from all Mozilla emails
@@ -135,7 +135,6 @@ Tynnu oddi ar holl e-byst Mozilla
 
 ;Save Preferences
 Cadw Dewisiadau
-
 
 ;Thanks for updating your email preferences.
 Diolch am ddiweddaru eich dewisiadau e-bost.
@@ -175,5 +174,3 @@ Cyflwyno
 
 ;Thanks for telling us why you’re leaving.
 Diolch am ddweud pam rydych yn gadael.
-
-
