--- a/cy/newsletter.lang
+++ b/cy/newsletter.lang
@@ -113,8 +113,8 @@ Bod yn Ffrind!
 Mae Firefox hefyd ar eich hoff wefannau rhwydweithio cymdeithasol. Cysylltwch â ni ac ymuno yn y sgwrs.
 
 
-;Manage your <span>Newsletter Subscriptions
-Rheoli eich <span>Tanysgrifiadau Newyddlen
+;Manage your <span>Newsletter Subscriptions</span>
+Rheoli eich <span>Tanysgrifiadau Newyddlen</span>
 
 
 ;Subscribe
@@ -125,7 +125,7 @@ Tanysgrifio
 Dad-danysgrifio
 
 
-;Check here if you’d like to be removed from all Mozilla emails'
+;Check here if you’d like to be removed from all Mozilla emails
 Ticiwch yma os hoffech chi gael eich tynnu oddi ar holl restrau e-bostio Mozilla
 
 
