l10n: Bug 727042 - [ku] Localize new firefox beta download page for desktop and mobile
git-svn-id: https://svn.mozilla.org/projects/mozilla.com/trunk/locales@104076 4eb1ac78-321c-0410-a911-ec516a8615a5

--- a/ku/firefoxtesting.lang
+++ b/ku/firefoxtesting.lang
@@ -2,15 +2,15 @@
 
 
 ;Download Firefox Beta for Android - Free
-Download Firefox Beta for Android - Free
+Firefox betayê ji bo Androîdê daxe - Belaþ e
 
 
 ;Download Firefox Beta for Desktop - Free
-Download Firefox Beta for Desktop - Free
+Firefox Betayê ji bo Sermaseyê daxe - belaþ e
 
 
 ;Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
-Download and test Firefox future releases. Experience the newest innovations with the Aurora or Beta builds.
+Daxde û guhertoya siberojê biceribîne. Bi Aurora an jî Betayê guhertinên herî nû biceribîne.
 
 
 ;Firefox Beta
@@ -18,42 +18,42 @@ Firefox Beta
 
 
 ;Firefox Beta for:
-Firefox Beta for:
+Firefox Beta bo:
 
 
 ;Firefox Beta for Mobile
-Firefox Beta for Mobile
+Firefox Beta bo Mobîlê
 
 
 ;Download Beta and be part of the next version of Firefox.
-Download Beta and be part of the next version of Firefox.
+Betayê daxe û bibe parçeyeke guhertoya nû ya Firefoxê.
 
 
 ;1. Test Features
-1. Test Features
+1. taybetiyên testê
 
 
 ;Try out the latest performance, customization and security enhancements almost ready for prime time.
-Try out the latest performance, customization and security enhancements almost ready for prime time.
+Performans, takekeskirin û pêþketinên ewlekariyê ku êdî amade ne, biceribîne.
 
 
 ;2. Refine &amp; Polish
-2. Refine &amp; Polish
+2. Ciwankarî
 
 
 ;File bugs to help us put the final tweaks on performance and functionality in a stable environment.
-File bugs to help us put the final tweaks on performance and functionality in a stable environment.
+Ji bo guhertoyeke hevgirtî û ciwan û performanseke baþ bi bugên xwe beþdarî handanê bibin.
 
 
 ;3. Do Your Part
-3. Do Your Part
+3. Bandorkarî
 
 
 ;Have an impact on the next version of Firefox and the 450 million people who use it every day.
-Have an impact on the next version of Firefox and the 450 million people who use it every day.
+Li ser guhertoya nû ya Firefoxê û bi mîlyonan bikarhênerên ku her roj Firefoxê bi kar tînin, bandorê çêke.
 
 
 ;Supported devices
-Supported devices
+Cîhazên piþtgiriyê
 
 
